--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
         <title>Blog Now</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
         <link rel="stylesheet" href="/stylesheets/app.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     
     <body>
