--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,22 +1,27 @@
 <% include partials/header %>
-<div class="ui segment">
-  <div id="menu" class="item">
-    <form action="/blogs/<%=blog._id%>?_method=DELETE" method="POST">
-    <button class="ui negative  basic large button">Delete</button>
-  </form>
-  <a class="ui secondary basic large button" href="/blogs/<%= blog._id %>/edit">Edit</a>
-  </div>
-  <img class="ui centered image" src="<%= blog.image%>">
-  <h1 class="ui header"><%= blog.title%></h1>
-  <div class="content">
-    <div class="description">
-      <p><%- blog.body %></p>
-    </div>
-  </div>
-  <div class="extra content">
-    <p>
-      <%= blog.created.toGMTString() %>
-    </p>
+<div class="ui segment items">
+  <div class="item">
+      <div id="menu">
+        <form action="/blogs/<%=blog._id%>?_method=DELETE" method="POST">
+          <button class="ui negative  basic large button">Delete</button>
+        </form>
+        <a class="ui secondary basic large button" href="/blogs/<%= blog._id %>/edit">Edit</a>
+      </div>
+      <div class="image">
+        <img class="ui centered image" src="<%= blog.image%>">
+      </div>
+    
+      <h1 class="ui header"><%= blog.title%></h1>
+      <div class="content">
+        <div class="description">
+          <p><%- blog.body %></p>
+        </div>
+      </div>
+      <div class="extra content">
+        <p>
+          <%= blog.created.toGMTString() %>
+        </p>
+      </div>
   </div>
 </div>
 
