--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,31 +1,13 @@
 <% include partials/header %>
-<div class="ui segment items">
-  <div class="item">
-      
-      <div class="image">
-        <img class="ui centered image" src="<%= blog.image%>">
-      </div>
-    
-      <h1 class="ui header"><%= blog.title%></h1>
-      <div class="content">
-        <div class="description">
-          <p><%- blog.body %></p>
-        </div>
-      </div>
-      <div class="extra content">
-        <p>
-          
-        </p>
-      </div>
-  </div>
-</div>
-
-<div class="ui items">
-  <div class="item">
-    <div class="image">
-      <img src="<%= blog.image%>">
+<div class="ui segment">
+  <div id="menu">
+      <form action="/blogs/<%=blog._id%>?_method=DELETE" method="POST">
+        <button class="ui negative  basic large button">Delete</button>
+      </form>
+      <a class="ui secondary basic large button" href="/blogs/<%= blog._id %>/edit">Edit</a>
     </div>
-    <div class="content">
+  <img class="ui centered medium image" src="<%= blog.image%>">
+   <div class="content">
       <a class="header"><%= blog.title%></a>
       <div class="description">
         <p><%- blog.body %></p>
@@ -33,13 +15,16 @@
       <div class="extra">
         <%= blog.created.toGMTString() %>
       </div>
+  </div>
+</div>
+
+<div class="ui items">
+  <div class="item">
+    <div class="image">
+      <img >
     </div>
-    <div id="menu">
-      <form action="/blogs/<%=blog._id%>?_method=DELETE" method="POST">
-        <button class="ui negative  basic large button">Delete</button>
-      </form>
-      <a class="ui secondary basic large button" href="/blogs/<%= blog._id %>/edit">Edit</a>
-    </div>
+   
+    
   </div>
 </div>
 
