--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,40 +1,34 @@
 <% include partials/header %>
 <div class="ui main text container">
-    <div class="ui huge header">
-        Blog App
-    </div>
-    <div class="ui top attached segment">
-        <div class="ui divided items">
-            <% blogs.forEach(function(blog){ %>
-            
-            <div class="item">
-               <div class="image">
-                 <img src="<%= blog.image %>" > 
-               </div> 
-               
-               <div class="content">
-                 <a class="header" href="/blogs/<%= blog._id %>"><%=blog.title%></a>
-                 <div class="meta">
-                   <p><%= moment.utc(blog.created).tz('Asia/Kolkata').format('YYYY-MMM-DD h:mm A')%> </p> 
-                 </div>
-                 <div class="description">
-                   <p><%= blog.body %> </p>  
-                 </div>
-                 <div class="extra">
-                     <a class="ui floated basic violet button" href="/blogs/<%= blog._id %>">
-                        Read More
-                        <i class="right chevron icon"></i>
-                     </a>
-                </div>
+   <div class="ui huge header">
+      Blog App
+   </div>
+   <div class="ui top attached segment">
+      <div class="ui divided items">
+         <% blogs.forEach(function(blog){ %>
+         <div class="item">
+            <div class="image">
+               <img src="<%= blog.image %>" > 
+            </div>
+            <div class="content" style="text-align:left;">
+               <a class="header" href="/blogs/<%= blog._id %>"><%=blog.title%></a>
+               <div class="meta">
+                  <p><%= moment.utc(blog.created).tz('Asia/Kolkata').format('YYYY-MMM-DD h:mm A')%> </p>
+               </div>
+               <div class="description">
+                  <p><%= String(blog.body).substring(0,100) %>...</p>
+               </div>
+               <div class="extra">
+                  <a class="ui floated basic violet button" href="/blogs/<%= blog._id %>">
+                  Read More
+                  <i class="right chevron icon"></i>
+                  </a>
                </div>
             </div>
-            <% }); %>
-        </div>
-    </div>
+         </div>
+         <% }); %>
+      </div>
+   </div>
 </div>
-
-    
-    
-
-
 <% include partials/footer %>
+
